--- a/CONTACT DETAILS.html
+++ b/CONTACT DETAILS.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>MY COTACT DETAILS</title>
+      <link rel="stylesheet" href="css/styles.css">
+
   </head>
+  
   <body>
     <h1>MY CONTACT DETAILS</h1>
     <p>HELLO!</p>
