--- a/hobbies.html
+++ b/hobbies.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>MY HOBIES</title>
+      <link rel="stylesheet" href="css/styles.css">
+
   </head>
+  
   <body>
     <h3>MY HOBBIES</h3>
 <ol>
