--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <head>
     <meta charset="utf-8">
     <title>ALAMSHAS PERSONAL SITE</title>
+      <link rel="stylesheet" href="css/styles.css">
+
   </head>
-  <body>
+
+    <body>
     <table cellspacing="20">
       <tr>
         <td><img src="circle-cropped.png" alt="WALKING"></td>
